--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 
     <div class="heading">
         <h1 class="heading-1">Hey There.
-            I'm Alex.</h1>
+            I'm Shaun.</h1>
         <h2 class="heading-2">
             I'm a Software Developer
             </h2>
