--- a/index.html
+++ b/index.html
@@ -249,6 +249,11 @@ when an unknown printer took a standard dummy text.
             </div>
           </div>
 
+          <section class="contact-form">
+            <div>
+                
+            </div>
+          </section>
 
     </main>
 </body>
