--- a/index.html
+++ b/index.html
@@ -249,11 +249,22 @@ when an unknown printer took a standard dummy text.
             </div>
           </div>
 
-          <section class="contact-form">
-            <div>
-                
-            </div>
-          </section>
+          <footer class="footer">
+            <p class="f-text">
+                I'm always interested in hearing about new projects,
+                 so if you'd like to chat please get in touch.
+            </p>
+            
+            <form class="footer-form">
+                <input type="text" maxlength="30" placeholder="Full Name" name="full-name" required />
+                <input type="email" placeholder="Email Address"  name="email"   required />
+                <textarea class="footer-text-area" maxlength="500" placeholder="Write me something..." name="comment" required>
+
+                </textarea>
+                <input type="submit" value="Get in touch" required/>
+            </form>
+
+          </footer>
 
     </main>
 </body>
