Style form components

--- a/index.html
+++ b/index.html
@@ -258,10 +258,10 @@ when an unknown printer took a standard dummy text.
             <form class="footer-form">
                 <input type="text" maxlength="30" placeholder="Full Name" name="full-name" required />
                 <input type="email" placeholder="Email Address"  name="email"   required />
-                <textarea class="footer-text-area" maxlength="500" placeholder="Write me something..." name="comment" required>
+                <textarea class="footer-text-area" cols="30" rows="5" maxlength="500" name="comment" placeholder="Write me something..." required>
 
                 </textarea>
-                <input type="submit" value="Get in touch" required/>
+                <input class="form-button" type="submit" value="Get in touch" required/>
             </form>
 
           </footer>
