--- a/index.html
+++ b/index.html
@@ -250,11 +250,11 @@ when an unknown printer took a standard dummy text.
 
           <footer class="footer">
             <p class="f-text">
-                I'm always interested in hearing about new projects,
+                I'm always <br /> interested in hearing about new projects,
                  so if you'd like to chat please get in touch.
             </p>
             
-            <form class="footer-form" action="https://formspree.io/f/mrgvwoew">
+            <form class="footer-form" method="POST" action="https://formspree.io/f/mrgvwoew">
                 <input type="text" maxlength="30" placeholder="Full Name" name="full-name" required />
                 <input type="email" placeholder="Email Address"  name="email"   required />
                 <textarea class="footer-text-area" cols="30" rows="5" maxlength="500" name="comment" placeholder="Write me something..." required></textarea>
