pair programming with winnie and wilson

--- a/index.html
+++ b/index.html
@@ -90,27 +90,27 @@
           </div>
           <ul class="socials">
             <li>
-              <a href="https://github.com/wineshuga"
+              <a href=""
                 ><img src="./assets/icons/github.png" alt="github"
               /></a>
             </li>
             <li>
-              <a href="https://linkedin.com/in/wineshuga"
+              <a href=""
                 ><img src="./assets/icons/linkedin.png" alt="linkedin"
               /></a>
             </li>
             <li>
-              <a href="https://angellist.com"
+              <a href=""
                 ><img src="./assets/icons/angellist.png" alt="angellist"
               /></a>
             </li>
             <li>
-              <a href="https://twitter.com/wineshuga"
+              <a href=""
                 ><img src="./assets/icons/twitter.png" alt="twitter"
               /></a>
             </li>
             <li>
-              <a href="https://medium.com"
+              <a href=""
                 ><img src="./assets/icons/medium.png" alt="medium"
               /></a>
             </li>
@@ -299,63 +299,21 @@
           </p>  
         </div>
         <form
-          action="https://formspree.io/f/mbjevaqz"
+          action="https://formspree.io/f/mrgvwoew"
           method="post"
           class="form"
         >
         <fieldset>
-          <input
-          class="first-name"
-          type="text"
-          name="first-name"
-          id="first-name"
-          placeholder="First name"
-          maxlength="30"
-          required
+          <input class="first-name" type="text" name="first-name" id="first-name" placeholder="First name" maxlength="30" required
         />
-        <input
-          class="last-name"
-          type="text"
-          name="last-name"
-          id="last-name"
-          placeholder="Last name"
-          maxlength="30"
-          required
-        />
+        <input class="last-name" type="text" name="last-name" id="last-name" placeholder="Last name" maxlength="30" required />
       </fieldset>
-          <input
-            class="name"
-            type="text"
-            name="full-name"
-            id="full-name"
-            placeholder="Full name"
-            maxlength="30"
-            required
-          />
-          <input
-            class="email"
-            type="email"
-            name="email"
-            id="email"
-            placeholder="Email Address"
-            required
-          />
-          <textarea
-            class="comment"
-            name="comment"
-            id="comment"
-            cols="30"
-            rows="5"
-            maxlength="500"
-            placeholder="Write something in me..."
-            required
-          ></textarea
+          <input class="name" type="text" name="full-name" id="full-name" placeholder="Full name" maxlength="30" required/>
+          <input class="email" type="email" name="email" id="email" placeholder="Email Address" required />
+          <textarea class="comment" name="comment" id="comment" cols="30" rows="5" maxlength="500" placeholder="Write something in me..." required >
+          </textarea
           >
-          <input
-            class="btn form-button"
-            type="submit"
-            value="Get in touch"
-          /><br />
+          <input class="btn form-button" type="submit" value="Get in touch" /> <br />
         </form>
       </section>
     </main>
