--- a/index.html
+++ b/index.html
@@ -90,27 +90,27 @@
           </div>
           <ul class="socials">
             <li>
-              <a href="https://github.com/wineshuga"
+              <a href=""
                 ><img src="./assets/icons/github.png" alt="github"
               /></a>
             </li>
             <li>
-              <a href="https://linkedin.com/in/wineshuga"
+              <a href=""
                 ><img src="./assets/icons/linkedin.png" alt="linkedin"
               /></a>
             </li>
             <li>
-              <a href="https://angellist.com"
+              <a href=""
                 ><img src="./assets/icons/angellist.png" alt="angellist"
               /></a>
             </li>
             <li>
-              <a href="https://twitter.com/wineshuga"
+              <a href=""
                 ><img src="./assets/icons/twitter.png" alt="twitter"
               /></a>
             </li>
             <li>
-              <a href="https://medium.com"
+              <a href=""
                 ><img src="./assets/icons/medium.png" alt="medium"
               /></a>
             </li>
