--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <link
-      rel="preconnec
-    t"
+      rel="preconnect"
       href="https://fonts.googleapis.com"
     />
     <link
-      rel="preconnec
-    t"
+      rel="preconnect"
       href="https://fonts.gstatic.com"
       crossorigin
     />
@@ -21,13 +19,11 @@
       rel="stylesheet"
     />
     <link
-      rel="preconnec
-    t"
+      rel="preconnect"
       href="https://fonts.googleapis.com"
     />
     <link
-      rel="preconnec
-    t"
+      rel="preconnect"
       href="https://fonts.gstatic.com"
       crossorigin
     />
@@ -36,13 +32,11 @@
       rel="stylesheet"
     />
     <link
-      rel="preconnec
-    t"
+      rel="preconnect"
       href="https://fonts.googleapis.com"
     />
     <link
-      rel="preconnec
-    t"
+      rel="preconnect"
       href="https://fonts.gstatic.com"
       crossorigin
     />
@@ -65,10 +59,10 @@
       <nav>
         <img src="./assets/icons/menu.png" class="menu-img" alt="menu" />
         <ul class="nav-list">
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#"><img src="./assets/icons/mail.svg" alt="mail box"></a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href=""><img src="./assets/icons/mail.svg" alt="mail box"></a></li>
         </ul>
       </nav>
     </header>
@@ -299,7 +293,7 @@
           </p>  
         </div>
         <form
-          action="https://formspree.io/f/mbjevaqz"
+            action="https://formspree.io/f/mbjevaqz" 
           method="post"
           class="form"
         >
@@ -363,27 +357,27 @@
       <hr class="footer-hr" />
       <ul class="footer-socials">
         <li>
-          <a href="https://github.com/wineshuga"
+          <a href=""
             ><img src="./assets/icons/github-ft.svg" alt="github"
           /></a>
         </li>
         <li>
-          <a href="https://linkedin.com/in/wineshuga"
+          <a href=""
             ><img src="./assets/icons/linkedin-ft.svg" alt="linkedin"
           /></a>
         </li>
         <li>
-          <a href="https://angellist.com"
+          <a href=""
             ><img src="./assets/icons/angellist-ft.svg" alt="angellist"
           /></a>
         </li>
         <li>
-          <a href="https://twitter.com/wineshuga"
+          <a href=""
             ><img src="./assets/icons/twitter-ft.svg" alt="twitter"
           /></a>
         </li>
         <li>
-          <a href="https://medium.com"
+          <a href=""
             ><img src="./assets/icons/medium-ft.svg" alt="medium"
           /></a>
         </li>
