--- a/index.html
+++ b/index.html
@@ -147,22 +147,12 @@
 
       <section class="works-section">
         <section class="works-item">
-          <article>
-            <h3 class="heading">Professional Art Printing Data</h3>
-            <p>
-              A daily selection of privately personalized reads; no accounts or
-              sign-ups required. Has been the industry's standard.
-            </p>
-            <ul class="works-item-list">
-              <li>HTML</li>
-              <li>Bootscrap</li>
-              <li>Ruby</li>
-            </ul>
-          </article>
+          
+            
           <button type="button" class="works-btn btn">See project</button>
         </section>
 
-        <section class="works-item">
+        <section class="works-item1">
           <article>
             <h3 class="heading">Professional Art Printing Data</h3>
             <p>
@@ -175,10 +165,9 @@
               <li>Ruby</li>
             </ul>
           </article>
-          <button type="button" class="works-btn btn">See project</button>
-        </section>
+           </section>
 
-        <section class="works-item">
+        <section class="works-item2">
           <article>
             <h3 class="heading">Professional Art Printing Data</h3>
             <p>
@@ -191,10 +180,9 @@
               <li>Ruby</li>
             </ul>
           </article>
-          <button type="button" class="works-btn btn">See project</button>
-        </section>
+           </section>
 
-        <section class="works-item">
+        <section class="works-item3">
           <article>
             <h3 class="heading">Professional Art Printing Data</h3>
             <p>
@@ -207,9 +195,8 @@
               <li>Ruby</li>
             </ul>
           </article>
-          <button type="button" class="works-btn btn">See project</button>
-        </section>
-        <section class="works-item">
+          </section>
+        <section class="works-item4">
           <article>
             <h3 class="heading">Professional Art Printing Data</h3>
             <p>
@@ -222,10 +209,9 @@
               <li>Ruby</li>
             </ul>
           </article>
-          <button type="button" class="works-btn btn">See project</button>
-        </section>
+          </section>
 
-        <section class="works-item">
+        <section class="works-item5">
           <article>
             <h3 class="heading">Professional Art Printing Data</h3>
             <p>
@@ -238,8 +224,7 @@
               <li>Ruby</li>
             </ul>
           </article>
-          <button type="button" class="works-btn btn">See project</button>
-        </section>
+           </section>
       </section>
 
       <section class="about-section">
