--- a/index.html
+++ b/index.html
@@ -84,27 +84,27 @@
           </div>
           <ul class="socials">
             <li>
-              <a href=""
+              <a href="https://www.linkedin.com/in/shaun-sungai-b54339263/"
                 ><img src="./assets/icons/github.png" alt="github"
               /></a>
             </li>
             <li>
-              <a href=""
+              <a href="https://www.linkedin.com/in/shaun-sungai-b54339263/"
                 ><img src="./assets/icons/linkedin.png" alt="linkedin"
               /></a>
             </li>
             <li>
-              <a href=""
+              <a href="https://www.linkedin.com/in/shaun-sungai-b54339263/"
                 ><img src="./assets/icons/angellist.png" alt="angellist"
               /></a>
             </li>
             <li>
-              <a href=""
+              <a href="https://www.linkedin.com/in/shaun-sungai-b54339263/"
                 ><img src="./assets/icons/twitter.png" alt="twitter"
               /></a>
             </li>
             <li>
-              <a href=""
+              <a href="https://www.linkedin.com/in/shaun-sungai-b54339263/"
                 ><img src="./assets/icons/medium.png" alt="medium"
               /></a>
             </li>
