Index page touch ups

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <li><a href="">Portfolio</a></li>
           <li><a href="">About</a></li>
           <li><a href="">Contact</a></li>
-          <li><a href=""><img src="./assets/icons/mail.svg" alt="mail box"></a></li>
+          <li><a href=""><img src="./assets/icons/mail.svg" alt="mail-box"></a></li>
         </ul>
       </nav>
     </header>
