Add Anchor Tags To Popup Menu

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <header class="header">
       <a href="">Paul Shaun</a>
       <nav>    
-        <img src="./assets/icons/menu.png" class="menu-img" alt="menu" />
+        <img src="./assets/icons/menu.png" id="Port" class="menu-img" alt="menu" />
         <ul class="nav-list">
           <li><a>Portfolio</a></li>
           <li><a>About</a></li>
@@ -73,7 +73,7 @@
             <img src="assets/images/X.png" alt="Close Menu Icom" />
           </div>
           <ul class="nav-items">
-            <li><a href="#Projects" class="menu_items">Portfolio</a></li>
+            <li><a href="#Port" class="menu_items">Portfolio</a></li>
             <li><a href="#About"  class="menu_items">About</a></li>
             <li><a href="#Contact" class="menu_items">Contact</a></li>
           </ul> 
@@ -245,7 +245,7 @@
       </section>
 
       <section class="about-section">
-        <article class="about-details">
+        <article id="About" class="about-details">
           <h3>About me</h3>
           <p>
             Hello I’m a software developer! I can help you build a product,
@@ -289,7 +289,7 @@
       </section>
       <section class="contact-section">
         <div>
-          <p>
+          <p id="Contact" >
             I'm always interested in hearing about new projects, so if you'd like
             to chat please get in touch.
           </p>  
