footer socials rebase

--- a/index.html
+++ b/index.html
@@ -193,19 +193,19 @@
     <hr class="footer-hr" />
     <ul class="footer-socials">
       <li>
-        <a href="https://github.com/wineshuga"><img src="./assets/icons/github-ft.svg" alt="github" /></a>
+        <a href=""><img src="./assets/icons/github-ft.svg" alt="github" /></a>
       </li>
       <li>
-        <a href="https://linkedin.com/in/wineshuga"><img src="./assets/icons/linkedin-ft.svg" alt="linkedin" /></a>
+        <a href=""><img src="./assets/icons/linkedin-ft.svg" alt="linkedin" /></a>
       </li>
       <li>
-        <a href="https://angellist.com"><img src="./assets/icons/angellist-ft.svg" alt="angellist" /></a>
+        <a href=""><img src="./assets/icons/angellist-ft.svg" alt="angellist" /></a>
       </li>
       <li>
-        <a href="https://twitter.com/wineshuga"><img src="./assets/icons/twitter-ft.svg" alt="twitter" /></a>
+        <a href=""><img src="./assets/icons/twitter-ft.svg" alt="twitter" /></a>
       </li>
       <li>
-        <a href="https://medium.com"><img src="./assets/icons/medium-ft.svg" alt="medium" /></a>
+        <a href=""><img src="./assets/icons/medium-ft.svg" alt="medium" /></a>
       </li>
     </ul>
   </footer>
