--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
         </div>
       </section>
       <section class="mp-sec">
-        <div class="mp-sec-img">
+       <!--  <div class="mp-sec-img">
           
-          <img src="./assets//images/mp-img.svg" alt="image of multi-post stories" />
+          <img src="./assets/images/mp-img.svg" alt="image of multi-post stories" />
           <br />
         <br />
         </div>
@@ -117,9 +117,11 @@
             <li>Ruby</li>
           </ul>
           <button type="button" class="mp-btn btn">See project</button>
-        </article>
+        </article> -->
+      </section> 
+      <section class="popup-section">
+
       </section>
-      <section class="popup-section"></section>
     </section>
 
     <section id="about" class="about-section">
