Reviewer suggest Changes

--- a/index.html
+++ b/index.html
@@ -40,15 +40,17 @@
           <a href=""><img src="./assets/icons/mail.svg" alt="mail box" /></a>
         </li>
       </ul>
+    </nav>
+
       <div class="mobile-menu">
         <img src="./assets/images/X.png" class="icon cancel-icon" alt="close menu icon">
         <ul class="mobile-nav">
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#portfolio" onclick="closeMenu()">Portfolio</a></li>
+          <li><a href="#about" onclick="closeMenu()">About</a></li>
+          <li><a href="#contact" onclick="closeMenu()">Contact</a></li>
         </ul>
       </div>
-    </nav>
+    
   </header>
 
   <main>
