Pop up menu base

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
       </section>
       <section class="mp-sec">
-       <!--  <div class="mp-sec-img">
+        <div class="mp-sec-img">
           
           <img src="./assets/images/mp-img.svg" alt="image of multi-post stories" />
           <br />
@@ -117,7 +117,7 @@
             <li>Ruby</li>
           </ul>
           <button type="button" class="mp-btn btn">See project</button>
-        </article> -->
+        </article>
       </section> 
       <section class="popup-section">
 
