Reviewer suggested changes

--- a/index.html
+++ b/index.html
@@ -100,31 +100,7 @@
         <div>
           <hr />
         </div>
-      </section> <!--
-      <section class="mp-sec">
-        <div class="mp-sec-img">
-          
-          <img src="./assets/images/mp-img.svg" alt="image of multi-post stories" />
-          <br />
-        <br />
-        </div>
-        
-        <article class="mp-article">
-          <h2 class="heading">Multi-Post Stories</h2>
-          <p>
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required has been the industry's standard dummy text ever
-            since the 1500s, when an unknown printer took a standard dummy
-            text.
-          </p>
-          <ul class="mp-list">
-            <li>CSS</li>
-            <li>HTML</li>
-            <li>Bootstrap</li>
-            <li>Ruby</li>
-          </ul>
-          <button type="button" class="mp-btn btn">See project</button>
-        </article> -->
+      </section>
       </section> 
       <section class="popup-section">
 
