--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <img src="./assets/images/X.png" class="icon cancel-icon" alt="close menu icon">
         <ul class="mobile-nav">
           <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <!-- <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li> -->
         </ul>
       </div>
     </nav>
