addition on about me

--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
       <article class="about-details">
         <h3>About me</h3>
         <p>
-          Hello I’m a software developer! I can help you build a product,
+          I’m a full-stack software developer! With a diverse tech stach, my top languages include: Python, Javascript and SQL.
+          I can help you build a product,
           feature or website Look through some of my work and experience! If
           you like what you see and have a project you need coded, don’t
           hesitate to contact me.
